--- a/notesJavaBasic/notes_javaBasic.html
+++ b/notesJavaBasic/notes_javaBasic.html
@@ -19,7 +19,7 @@
 
       <h1>Modificador Static</h1>
       <p>
-            Se crea dentro de una clase ( como todo en java ), sin embargo este modificar indica que ese metodo con la palabra Static puede invocarse sin necesidad de crearse un nuevo objeto de la clase.
+            Se crea dentro de una clase ( como todo en java ), sin embargo este modificar indica que esa variable/metodo con la palabra Static puede invocarse sin necesidad de crearse un nuevo objeto de la clase.
       </p>
 
       <h1>Modificador de visibilidad: protected</h1>
