--- a/notesJavaBasic/notes_javaBasic.html
+++ b/notesJavaBasic/notes_javaBasic.html
@@ -175,4 +175,12 @@
       <h4>Crear una linkedList a partir de un ArrayList</h4>
       <img src="images/crearLinkedListConUnaArrayList.png" alt="">
 
+      <h1>BigDecimal</h1>
+      <p>
+        Para variables que requieran mucha precisión.
+        Se usa para datos financieros.
+        BigDecimal es una clase, por lo tanto se deben usar sus metodos.
+        <img src="images/bigDecimal.png" alt="">
+      </p>
+
 </html>
