--- a/notesJavaBasic/notes_javaBasic.html
+++ b/notesJavaBasic/notes_javaBasic.html
@@ -165,11 +165,11 @@
       <h1>ArrayList vs LinkedList</h1>
       <img src="images/linkedList.png" alt="">
       <p>
-          Las linkedList funcionan igual que las arraylist.
-          La diferencia es que las arrayList por debajo tienen un array y las linkedList tienen una lista doblemente enlazada.
-          ArrayList es mas rapida para buscar datos.
-          LinkedList es mas rapida modificando datos.
-          Array implementa List y linkedList implementa list y deque
+            Las linkedList funcionan igual que las arraylist.
+            La diferencia es que las arrayList por debajo tienen un array y las linkedList tienen una lista doblemente enlazada.
+            ArrayList es mas rapida para buscar datos.
+            LinkedList es mas rapida modificando datos.
+            Array implementa List y linkedList implementa list y deque
       </p>
 
       <h4>Crear una linkedList a partir de un ArrayList</h4>
@@ -177,10 +177,25 @@
 
       <h1>BigDecimal</h1>
       <p>
-        Para variables que requieran mucha precisión.
-        Se usa para datos financieros.
-        BigDecimal es una clase, por lo tanto se deben usar sus metodos.
-        <img src="images/bigDecimal.png" alt="">
+            Para variables que requieran mucha precisión.
+            Se usa para datos financieros.
+            BigDecimal es una clase, por lo tanto se deben usar sus metodos.
+            <img src="images/bigDecimal.png" alt="">
       </p>
+
+      <h1>Maps</h1>
+      <img src="images/map.png" alt="">
+      <p>
+        Deben tener clave unica.
+        Para obtener un valor de una clave especifica: <br>
+        <img src="images/mapGetValue.png" alt="">
+
+        Con el metodo put(clave) se reemplaza el valor de una clave existente y en caso de no existir la crea.
+        Con el metodo replace(clave) se reemplaza el valor de una clave existente y en caso de no existir no hace nada.
+        Con el metodo remove(clave) se remueve la clave especficada.
+      </p>
+
+      <h4>Recorrer Mapa</h4>
+      <img src="images/recorrerMapa.png" alt="">
 
 </html>
