--- a/Java/Notes_HTML/Notes_Java.html
+++ b/Java/Notes_HTML/Notes_Java.html
@@ -197,7 +197,7 @@
             <img src="images/bigDecimal.png" alt="">
       </p>
 
-      <h1>Maps</h1>
+      <h1>HashMaps</h1>
       <img src="images/map.png" alt="">
       <p>
         Deben tener clave unica.
@@ -220,6 +220,32 @@
       </ul>
 
       <h1>Función de alto orden</h1>
-      <p>Una función que llama a otra función y regresa otra función</p>
+      <p>Una función que acepta como parametro una/varias funciones o regresa una función</p>
+      <p>Una función de alto orden:</p>
+      <img src="images/aLambdaLikeParameter.png">
 
+      <h1>Funciones Lambda</h1>
+      <p>Como se crean:</p>
+      <img src="images/Lambdas.png">
+      <p>Como se implementan ( como se invocan ):</p>
+      <img src="images/CallLambdas.png">
+
+
+      <h1>Streams --- Map/Filter/Reduce</h1>
+      <p>Estos metodos tambien aplican en los arrays JavaScript, aplica en los streams de Java</p>
+      <img src="images/Streams--MapFilterReduce.png">
+      <p>En todas se usan lambdas. <br>
+            <ul>
+                  <li>Map aplica una función </li>
+                  <li>Filter filtra de acuerdo a la funcion </li>
+                  <li>Reduce regresa un solo valor de acuerdo a la funcion planteada</li>
+            </ul>
+      </p>
+      <img src="images/Streams--FilterReduce.png">
+      <p>Resultados del ejemplo: </p>
+      <img src="images/Streams--FilterReduce_ConsoleResult.png">
+
+      <h1>Forma funcional ( Declarativa ) VS Forma imperativa</h1>
+      <img src="images/declarativaVSfuncional.png">
+</body>
 </html>
