--- a/Java/Notes_HTML/Notes_Java.html
+++ b/Java/Notes_HTML/Notes_Java.html
@@ -310,5 +310,8 @@
       <p>Clase intermedia para que dos clases que no tienen nada ver puedan trabajar mutuamente</p>
       <p>Se usa mucho para codigo legacy, cosas viejas se le agregan cosas nuevas. Se usa tambien cuando se desconoce/no se puede modificar el codigo fuente</p>
 
+      <h3>Patron fachada ( facade )</h3>
+      <p>Una sola clase aplica toda la complejidad del codigo</p>
+
 </body>
 </html>
