--- a/Java/Notes_HTML/Notes_Java.html
+++ b/Java/Notes_HTML/Notes_Java.html
@@ -313,5 +313,22 @@
       <h3>Patron fachada ( facade )</h3>
       <p>Una sola clase aplica toda la complejidad del codigo</p>
 
+      <h2>Patrones de comportamiento</h2>
+      <p>Se encargan de la comunicacion entre objetos</p>
+
+      <h3>Iterator</h3>
+      <p>Se guardan todos los objetos de una clase dentro de el para posteriormente iterar sobre ellos</p>
+
+      <h3>Observer ( Public suscriber ) </h3>
+      <p>Cuando se realiza una acción, los objetos "suscritos" reciben el mensaje</p>
+
+      <h3>Mediator</h3>
+      <p>Una clase se encarga de la Comunicación entre 2 o mas clases, si A quierre hablar con B, A debe mandar el msg al mediador y el mediador le da el mensaje a B</p>
+
+      <strong>Nota: Observer y mediator son parecidos, en observer solo habla uno y los demas solo reciben la notificacion, en el mediator todos pueden hablar y recibir notificaciones</strong>
+
+      <h3>State</h3>
+      <p>Para hacer workflows, permitir o no permitir cosas dependiendo el estado.</p>
+
 </body>
 </html>
