--- a/Java/Notes_HTML/Notes_Java.html
+++ b/Java/Notes_HTML/Notes_Java.html
@@ -330,5 +330,32 @@
       <h3>State</h3>
       <p>Para hacer workflows, permitir o no permitir cosas dependiendo el estado.</p>
 
+      <h3>Strategy</h3>
+      <p>Un mismo codigo se comporta de diferentes formas. Por medio de un wrapper ( Una funcion cuyo parametro es una interfaz en main ) se implementa una u otra clase.</p>
+
+      <h3>Clean code</h3>
+      <p>Un codigo que cualquier desarrollador puede leer y cambiar facilmente. Tiene 3 puntos:</p>
+      <ul>
+            <li>Focalizado: cada componente hace una unica cosa </li>
+            <li>Lo mas simple posible</li>
+            <li>Verificable</li>
+      </ul>
+
+      <h4>Refactor</h4>
+      <h5>Test-driven development (TDD) / Red Green Refactor</h5>
+      <p>Un tipo de tecnica: <a href="https://www.codecademy.com/article/tdd-red-green-refactor" target="_blank"> Red, Green and Refactor </a></p>
+      <p>Aqui primero se escriben las pruebas unitarias y luego se implementa el codigo, cuando el codigo pasa el test, se refactoriza en caso de ser necesario</p>
+
+      <h4>Nombrado</h4>
+      <ul>
+            <li>Clases: sustantivos</li>
+            <li>Interfaces: adjetives con terminacion "able" ( example: iterable )</li>
+            <li>Metodos: verbos</li>
+            <li>Variables constantes: todas mayusculas, las palabras no se juntan ( example: MAX_USERS )</li>
+            <li>Variables: autodescriptivos, minisculas en caso de tener mas de 1 palabras, a partir de la segunda palabra la primer letra se capitaliza</li>
+      </ul>
+
+      <p>Notación hungara: poner como prefijo el tipo de dato que es ( example: para un array de enteros --- aiNumeros )</p>
+
 </body>
 </html>
