--- a/Java/Notes_HTML/Notes_Java.html
+++ b/Java/Notes_HTML/Notes_Java.html
@@ -387,5 +387,20 @@
       <p>Posicionar funciones dependientes lo mas cercano a la funcion que lo llama</p>
       <p>Entre mas bajo de clase mas complejidad de codigo</p>
       <p>Funciones afines lo mas cerca posible</p>
+
+      <h4>Ley de demeter para evitar alto acoplamiento // Directiva del menor conocimiento</h4>
+      <p>4 tipos de relacion en metodos:</p>
+      <ul >
+            <li >Usar algo de la propia clase atributo</li >
+            <li>Un objeto generado dentro de la clase</li>
+      </ul >
+      <img src = "images/leydemeter1.png" alt = "permitido o no" >
+      <p>Para evitar lo de imagen, se podria implementar un patron mediador</p>
+
+      <h4>Argumentos ( Argument Parser )</h4>
+      <p>Librerias disponibles:</p>
+      <a href="http://commons.apache.org/cli/" target="_blank" >Apache Commons CLI</a> <br >
+      <a href="http://www.martiansoftware.com/jsap/" target="_blank" >JSAP</a>
+
 </body>
 </html>
