More spring notes

--- a/Spring/HellowWorld/src/Notes/notesSpring.html
+++ b/Spring/HellowWorld/src/Notes/notesSpring.html
@@ -16,5 +16,6 @@
     <h2>Containers</h2>
     <img src="images/beans.png" alt="beans">
     <p>Into "resources" in the file "beans.xml" we add the classes that spring will handle. The objects from that classes are unique.</p>
+    <img src="images/javaVsSpring.png" alt="Java vs Spring">
 </body>
 </html>
