More spring notes

--- a/Spring/Notes/notesSpring.html
+++ b/Spring/Notes/notesSpring.html
@@ -17,5 +17,11 @@
     <img src="images/beans.png" alt="beans">
     <p>Into "resources" in the file "beans.xml" we add the classes that spring will handle. The objects from that classes are unique.</p>
     <img src="images/javaVsSpring.png" alt="Java vs Spring">
+
+    <h2>Spring Initializer</h2>
+    <img src="images/springInitializer.png" alt="spring Initializer">
+
+    <h2>Repositories</h2>
+    <img src="images/springRepositories.png" alt="spring Repositories">
 </body>
 </html>
