Add spring RestJPA files

--- a/Spring/Notes/notesSpring.html
+++ b/Spring/Notes/notesSpring.html
@@ -22,6 +22,16 @@
     <img src="images/springInitializer.png" alt="spring Initializer">
 
     <h2>Repositories</h2>
-    <img src="images/springRepositories.png" alt="spring Repositories">
+    <p>This class is for DB connection</p>
+    <img src="images/springDB.png" alt="spring Repositories">
+
+    <h2>REST</h2>
+    <p>This class will receive http request</p>
+    <img src="images/springRest.png" alt="springRest">
+    <p>@RestController is for Restful, @Controller is for spring MVC </p>
+
+    <h2>Log</h2>
+    <p>To save errors in the log</p>
+    <img src="images/logWarning.png" alt="Log warning">
 </body>
 </html>
