Add spring security initial files

--- a/Spring/Notes/notesSpring.html
+++ b/Spring/Notes/notesSpring.html
@@ -33,5 +33,24 @@
     <h2>Log</h2>
     <p>To save errors in the log</p>
     <img src="images/logWarning.png" alt="Log warning">
+
+    <h2>Deploy Spring</h2>
+    <h3>Create a .jar</h3>
+    <img src="images/deploy.png">
+    
+    <h3>Deploy a .jar using terminal</h3>
+    <img src="images/deploy2.png" alt="">
+
+    <h3>Multiple application properties</h3>
+    <img src="images/deployAppProperties.png" alt="">
+
+    <h3>Variable de entorno en application properties</h3>
+    <img src="images/variableEntorno.png" alt="">
+    <p>Esto es util para contraseñas y evitar que se guarden en un repositorio de github</p>
+
+    <h2>Spring security</h2>
+    <img src="images/springSecurity.png" alt="">
+
+    
 </body>
 </html>
